--- a/lesson-4/homework/lesson-4.ipynb
+++ b/lesson-4/homework/lesson-4.ipynb
@@ -113,6 +113,116 @@
     "dict_square = {num: num ** 2 for num in range(1,16)}\n",
     "print('Squared dictionary:',dict_square)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5ec33333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 4, 6, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Create a Set. Write a Python program to create a set.\n",
+    "set_list = {3, 2, 6, 4, 9, 3, 0, 2}\n",
+    "print(set_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ec2950fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7. Iterate Over a Set. Write a Python program to iterate over sets.\n",
+    "set_list = {3, 2, 6, 4, 9, 3, 0, 2}\n",
+    "\n",
+    "for i in set_list:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e2e304fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 'craig', 9, 'terry', 'alex'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8. Add Member(s) to a Set.Write a Python program to add member(s) to a set.\n",
+    "set1 = {'alex', 'terry', 'craig', 2, 3, 2, 'terry'}\n",
+    "set1.add(9)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6106acc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 5, 6, 7, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9. Remove Item(s) from a Set. Write a Python program to remove item(s) from a given set.\n",
+    "num_set = {8, 1, 9, 3, 5, 7, 5, 6, 4}\n",
+    "num_set.remove(8)\n",
+    "print(num_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8a225878",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 5, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10. Remove an Item if Present in the Set. Write a Python program to remove an item from a set if it is present in the set.\n",
+    "num_set = {8, 1, 9, 3, 5, 7, 5, 6, 4}\n",
+    "num_set.discard(2)\n",
+    "print(num_set)"
+   ]
   }
  ],
  "metadata": {
